# SD2

./: .gitignore  README.md  aggregate_unified_results.py  pyproject.toml  requirements-llada.txt  requirements.txt  run.sh  run_ablation.py  run_lave_sdsd_compare.py  run_unified_benchmark.py  run_unified_benchmark.sh
bench/: analyze_fn_results.py  check_dataset_size.py  compare_dg_dp.py  modal_experiments_bench.py  modal_lave_bench.py  modal_lave_fn_bench.py  oracle_compare_dedup_dfs.py  oracle_fast.py  run_igcd_timed.py  run_lave_timed.py
dgrammar/: wildcard_earley.py
docs/: ablation.md  experiment_comparison.md  lave_sdsd_compare.md  plan.md  proposal.pptx  wildcard_detail.md
docs/demo/: README.md  index.html  intuition.md
latex/latex/: acl_latex.aux  acl_latex.bbl  acl_latex.blg  acl_latex.fdb_latexmk  acl_latex.fls  acl_latex.out  acl_latex.tex  custom.bib  final.tex
results/: ablation_results_dream.json  ablation_results_llada.json  benchmark_results.txt  experiment_results.json  v2_async_ac4_timed_jsb_medium_s0_t128.jsonl  v2_async_ac4_timed_jsb_medium_s0_t128_off66.jsonl
results/unified/: sdsd_ablation1_jsonschema.jsonl  sdsd_ablation2_jsonschema.jsonl  sdsd_ablation3_jsonschema.jsonl  sdsd_bidi_jsonschema.jsonl
src/: __init__.py  baseline_dingo.py  benchmark_b1_b2.py  bidirectional_dingo.py  csr_dfa.py  dataset_loaders.py  diffusion_sdsd.py  herding.py  sdsd.py  sparse_dingo.py  speculative_tree.py  test_dllm_sdsd.py  test_sdsd.py
src/sdsd.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+1 files in other folders)
